--- a/promo.css
+++ b/promo.css
@@ -1,4 +1,4 @@
-
+<style>
 .btn.btn-primary.promo-filter-btn {
         margin: 5px;
         text-transform: uppercase;
@@ -73,3 +73,4 @@
         box-shadow: none !important;
     }
 
+</style>
